# tfmmkv

./: Makefile.in  README  configure.ac  example.tcl  manifest  manifest.uuid
manifest_example/: build-info.txt  manifest  manifest.txt  manifest.uuid
tools/: mkversion.c  mkversion.tcl
