#!/bin/bash -norc
dnl     This file is an input file used by the GNU "autoconf" program to
dnl     generate the file "configure", which is run during Tcl installation
dnl     to configure the system for the local environment.

#
# Only the part for building manifest.txt
#

AC_INIT([example],[1.1])

